src/styles/blocks/header.scss
.header {
  background-image: url(../images/backgrounds/header-bg-mobile.jpg);
  background-size: cover;
  background-position: right;

  @include onTablet {
    background-position: center;
  }

  &__content {

    display: flex;
    flex-direction: column;
    justify-content: space-between;

    height: 100vh;
  }

  &__title {
    margin: 0;
    font-style: normal;
    font-weight: 700;
    font-size: 36px;
    line-height: 100%;
    letter-spacing: -1.5px;
    text-align: center;

    @include onTablet {
      font-size: 64px;
    }

    @include onDesktop {
      font-size: 80px;
    }
  }
  
  &__bottom {
    padding-bottom: 88px;

    @include onTablet {
      padding-bottom: 130px;
    }

    @include onDesktop {
      padding-bottom: 203px;
    }
  }
}

